testsuite/tests/saks/should_fail/T18863a.stderr

T18863a.hs:9:1: error: [GHC-25115]
    • Visibility of forall-bound variables is not compatible
        Expected: forall i -> i -> *
          Actual: forall i. i -> *
    • In the data type declaration for ‘IDa’
